recursion.cons.lessons.recursion.cons.Length.scala.error
length:2: error: identifier expected but ']' found.
  if(l==[])
         ^length:6: error: ']' expected but '}' found.
  } 
  ^length:2: error: type application is not allowed for postfix operators
  if(l==[])
      ^